# neural-networks

./: .gitignore  README.md  Untitled0.ipynb  check_gpu.py  config.yaml  git_update.sh  requirements.txt
animal-faces/: animal-faces.py  api_server.py  index.html  pyproject.toml  requirements.txt
animal-faces/tests/: test_api.py  test_config.py
rice-type-classification/: rice-type-classification.py
